Phaze5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIGIT_ERROR
    ILLEGALCHAR
    LACKO
    RACKO

Grammar

Rule 0     S' -> program
Rule 1     program -> C V P BEGIN statement S END SEMICOLON
Rule 2     C -> CONST const_decl C
Rule 3     C -> epsilon
Rule 4     V -> VAR var_decl V
Rule 5     V -> epsilon
Rule 6     P -> proc_decl P
Rule 7     P -> epsilon
Rule 8     S -> statement S
Rule 9     S -> epsilon
Rule 10    const_decl -> ID EQUAL integer SEMICOLON
Rule 11    ID -> IDENTIFIER CAMMA ID
Rule 12    ID -> IDENTIFIER
Rule 13    var_decl -> ID COLON type SEMICOLON
Rule 14    type -> INTEGER
Rule 15    type -> CHAR
Rule 16    proc_decl -> PROCEDURE IDENTIFIER LPAREN F RPAREN SEMICOLON block
Rule 17    F -> format SEMICOLON F
Rule 18    F -> format
Rule 19    F -> epsilon
Rule 20    format -> ID COLON M type
Rule 21    M -> mode
Rule 22    M -> epsilon
Rule 23    mode -> IN
Rule 24    mode -> OUT
Rule 25    mode -> IN OUT
Rule 26    block -> BEGIN C V S END SEMICOLON
Rule 27    statement -> block
Rule 28    statement -> print
Rule 29    statement -> read
Rule 30    statement -> asgn
Rule 31    statement -> cond
Rule 32    statement -> for
Rule 33    statement -> return
Rule 34    statement -> call
Rule 35    print -> PRINT LPAREN string E RPAREN SEMICOLON
Rule 36    E -> expr CAMMA E
Rule 37    E -> expr
Rule 38    E -> epsilon
Rule 39    read -> READ LPAREN string Va RPAREN SEMICOLON
Rule 40    Va -> var CAMMA Va
Rule 41    Va -> expr
Rule 42    Va -> epsilon
Rule 43    asgn -> var ASSIGN expr SEMICOLON
Rule 44    cond -> IF bool THEN statement EL
Rule 45    EL -> ELSE statement
Rule 46    EL -> epsilon
Rule 47    for -> FOR ID ASSIGN expr TO expr DO statement
Rule 48    return -> RETURN SEMICOLON
Rule 49    call -> CALL IDENTIFIER LPAREN E RPAREN SEMICOLON
Rule 50    expr -> integer
Rule 51    expr -> MINES expr
Rule 52    expr -> expr PLUS expr
Rule 53    expr -> expr MINES expr
Rule 54    expr -> expr MUL expr
Rule 55    expr -> expr DIVIDE expr
Rule 56    expr -> LPAREN expr RPAREN
Rule 57    expr -> var
Rule 58    expr -> string
Rule 59    expr -> ID
Rule 60    var -> ID BRAC
Rule 61    var -> ID
Rule 62    BRAC -> LBRACKET expr RBRACKET
Rule 63    BRAC -> epsilon
Rule 64    bool -> NOT bool
Rule 65    bool -> bool AND bool
Rule 66    bool -> bool OR bool
Rule 67    bool -> bool relop bool
Rule 68    bool -> LPAREN bool RPAREN
Rule 69    bool -> ID
Rule 70    bool -> integer
Rule 71    relop -> EQUAL
Rule 72    relop -> GREATER
Rule 73    relop -> LESS
Rule 74    relop -> GREATEQ
Rule 75    relop -> LESSEQ
Rule 76    relop -> NOT_EQUAL
Rule 77    integer -> DIGIT
Rule 78    string -> STR
Rule 79    epsilon -> <empty>

Terminals, with rules where they appear

AND                  : 65
ASSIGN               : 43 47
BEGIN                : 1 26
CALL                 : 49
CAMMA                : 11 36 40
CHAR                 : 15
COLON                : 13 20
CONST                : 2
DIGIT                : 77
DIGIT_ERROR          : 
DIVIDE               : 55
DO                   : 47
ELSE                 : 45
END                  : 1 26
EQUAL                : 10 71
FOR                  : 47
GREATEQ              : 74
GREATER              : 72
IDENTIFIER           : 11 12 16 49
IF                   : 44
ILLEGALCHAR          : 
IN                   : 23 25
INTEGER              : 14
LACKO                : 
LBRACKET             : 62
LESS                 : 73
LESSEQ               : 75
LPAREN               : 16 35 39 49 56 68
MINES                : 51 53
MUL                  : 54
NOT                  : 64
NOT_EQUAL            : 76
OR                   : 66
OUT                  : 24 25
PLUS                 : 52
PRINT                : 35
PROCEDURE            : 16
RACKO                : 
RBRACKET             : 62
READ                 : 39
RETURN               : 48
RPAREN               : 16 35 39 49 56 68
SEMICOLON            : 1 10 13 16 17 26 35 39 43 48 49
STR                  : 78
THEN                 : 44
TO                   : 47
VAR                  : 4
error                : 

Nonterminals, with rules where they appear

BRAC                 : 60
C                    : 1 2 26
E                    : 35 36 49
EL                   : 44
F                    : 16 17
ID                   : 10 11 13 20 47 59 60 61 69
M                    : 20
P                    : 1 6
S                    : 1 8 26
V                    : 1 4 26
Va                   : 39 40
asgn                 : 30
block                : 16 27
bool                 : 44 64 65 65 66 66 67 67 68
call                 : 34
cond                 : 31
const_decl           : 2
epsilon              : 3 5 7 9 19 22 38 42 46 63
expr                 : 36 37 41 43 47 47 51 52 52 53 53 54 54 55 55 56 62
for                  : 32
format               : 17 18
integer              : 10 50 70
mode                 : 21
print                : 28
proc_decl            : 6
program              : 0
read                 : 29
relop                : 67
return               : 33
statement            : 1 8 44 45 47
string               : 35 39 58
type                 : 13 20
var                  : 40 43 57
var_decl             : 4

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . C V P BEGIN statement S END SEMICOLON
    (2) C -> . CONST const_decl C
    (3) C -> . epsilon
    (79) epsilon -> .

    CONST           shift and go to state 3
    VAR             reduce using rule 79 (epsilon -> .)
    PROCEDURE       reduce using rule 79 (epsilon -> .)
    BEGIN           reduce using rule 79 (epsilon -> .)

    program                        shift and go to state 1
    C                              shift and go to state 2
    epsilon                        shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> C . V P BEGIN statement S END SEMICOLON
    (4) V -> . VAR var_decl V
    (5) V -> . epsilon
    (79) epsilon -> .

    VAR             shift and go to state 6
    PROCEDURE       reduce using rule 79 (epsilon -> .)
    BEGIN           reduce using rule 79 (epsilon -> .)

    V                              shift and go to state 5
    epsilon                        shift and go to state 7

state 3

    (2) C -> CONST . const_decl C
    (10) const_decl -> . ID EQUAL integer SEMICOLON
    (11) ID -> . IDENTIFIER CAMMA ID
    (12) ID -> . IDENTIFIER

    IDENTIFIER      shift and go to state 10

    const_decl                     shift and go to state 8
    ID                             shift and go to state 9

state 4

    (3) C -> epsilon .

    VAR             reduce using rule 3 (C -> epsilon .)
    PROCEDURE       reduce using rule 3 (C -> epsilon .)
    BEGIN           reduce using rule 3 (C -> epsilon .)
    PRINT           reduce using rule 3 (C -> epsilon .)
    READ            reduce using rule 3 (C -> epsilon .)
    IF              reduce using rule 3 (C -> epsilon .)
    FOR             reduce using rule 3 (C -> epsilon .)
    RETURN          reduce using rule 3 (C -> epsilon .)
    CALL            reduce using rule 3 (C -> epsilon .)
    IDENTIFIER      reduce using rule 3 (C -> epsilon .)
    END             reduce using rule 3 (C -> epsilon .)


state 5

    (1) program -> C V . P BEGIN statement S END SEMICOLON
    (6) P -> . proc_decl P
    (7) P -> . epsilon
    (16) proc_decl -> . PROCEDURE IDENTIFIER LPAREN F RPAREN SEMICOLON block
    (79) epsilon -> .

    PROCEDURE       shift and go to state 14
    BEGIN           reduce using rule 79 (epsilon -> .)

    P                              shift and go to state 11
    proc_decl                      shift and go to state 12
    epsilon                        shift and go to state 13

state 6

    (4) V -> VAR . var_decl V
    (13) var_decl -> . ID COLON type SEMICOLON
    (11) ID -> . IDENTIFIER CAMMA ID
    (12) ID -> . IDENTIFIER

    IDENTIFIER      shift and go to state 10

    var_decl                       shift and go to state 15
    ID                             shift and go to state 16

state 7

    (5) V -> epsilon .

    PROCEDURE       reduce using rule 5 (V -> epsilon .)
    BEGIN           reduce using rule 5 (V -> epsilon .)
    PRINT           reduce using rule 5 (V -> epsilon .)
    READ            reduce using rule 5 (V -> epsilon .)
    IF              reduce using rule 5 (V -> epsilon .)
    FOR             reduce using rule 5 (V -> epsilon .)
    RETURN          reduce using rule 5 (V -> epsilon .)
    CALL            reduce using rule 5 (V -> epsilon .)
    IDENTIFIER      reduce using rule 5 (V -> epsilon .)
    END             reduce using rule 5 (V -> epsilon .)


state 8

    (2) C -> CONST const_decl . C
    (2) C -> . CONST const_decl C
    (3) C -> . epsilon
    (79) epsilon -> .

    CONST           shift and go to state 3
    VAR             reduce using rule 79 (epsilon -> .)
    PROCEDURE       reduce using rule 79 (epsilon -> .)
    BEGIN           reduce using rule 79 (epsilon -> .)
    PRINT           reduce using rule 79 (epsilon -> .)
    READ            reduce using rule 79 (epsilon -> .)
    IF              reduce using rule 79 (epsilon -> .)
    FOR             reduce using rule 79 (epsilon -> .)
    RETURN          reduce using rule 79 (epsilon -> .)
    CALL            reduce using rule 79 (epsilon -> .)
    IDENTIFIER      reduce using rule 79 (epsilon -> .)
    END             reduce using rule 79 (epsilon -> .)

    C                              shift and go to state 17
    epsilon                        shift and go to state 4

state 9

    (10) const_decl -> ID . EQUAL integer SEMICOLON

    EQUAL           shift and go to state 18


state 10

    (11) ID -> IDENTIFIER . CAMMA ID
    (12) ID -> IDENTIFIER .

  ! shift/reduce conflict for CAMMA resolved as shift
    CAMMA           shift and go to state 19
    EQUAL           reduce using rule 12 (ID -> IDENTIFIER .)
    COLON           reduce using rule 12 (ID -> IDENTIFIER .)
    LBRACKET        reduce using rule 12 (ID -> IDENTIFIER .)
    ASSIGN          reduce using rule 12 (ID -> IDENTIFIER .)
    THEN            reduce using rule 12 (ID -> IDENTIFIER .)
    AND             reduce using rule 12 (ID -> IDENTIFIER .)
    OR              reduce using rule 12 (ID -> IDENTIFIER .)
    GREATER         reduce using rule 12 (ID -> IDENTIFIER .)
    LESS            reduce using rule 12 (ID -> IDENTIFIER .)
    GREATEQ         reduce using rule 12 (ID -> IDENTIFIER .)
    LESSEQ          reduce using rule 12 (ID -> IDENTIFIER .)
    NOT_EQUAL       reduce using rule 12 (ID -> IDENTIFIER .)
    SEMICOLON       reduce using rule 12 (ID -> IDENTIFIER .)
    PLUS            reduce using rule 12 (ID -> IDENTIFIER .)
    MINES           reduce using rule 12 (ID -> IDENTIFIER .)
    MUL             reduce using rule 12 (ID -> IDENTIFIER .)
    DIVIDE          reduce using rule 12 (ID -> IDENTIFIER .)
    RPAREN          reduce using rule 12 (ID -> IDENTIFIER .)
    RBRACKET        reduce using rule 12 (ID -> IDENTIFIER .)
    TO              reduce using rule 12 (ID -> IDENTIFIER .)
    DO              reduce using rule 12 (ID -> IDENTIFIER .)

  ! CAMMA           [ reduce using rule 12 (ID -> IDENTIFIER .) ]


state 11

    (1) program -> C V P . BEGIN statement S END SEMICOLON

    BEGIN           shift and go to state 20


state 12

    (6) P -> proc_decl . P
    (6) P -> . proc_decl P
    (7) P -> . epsilon
    (16) proc_decl -> . PROCEDURE IDENTIFIER LPAREN F RPAREN SEMICOLON block
    (79) epsilon -> .

    PROCEDURE       shift and go to state 14
    BEGIN           reduce using rule 79 (epsilon -> .)

    proc_decl                      shift and go to state 12
    P                              shift and go to state 21
    epsilon                        shift and go to state 13

state 13

    (7) P -> epsilon .

    BEGIN           reduce using rule 7 (P -> epsilon .)


state 14

    (16) proc_decl -> PROCEDURE . IDENTIFIER LPAREN F RPAREN SEMICOLON block

    IDENTIFIER      shift and go to state 22


state 15

    (4) V -> VAR var_decl . V
    (4) V -> . VAR var_decl V
    (5) V -> . epsilon
    (79) epsilon -> .

    VAR             shift and go to state 6
    PROCEDURE       reduce using rule 79 (epsilon -> .)
    BEGIN           reduce using rule 79 (epsilon -> .)
    PRINT           reduce using rule 79 (epsilon -> .)
    READ            reduce using rule 79 (epsilon -> .)
    IF              reduce using rule 79 (epsilon -> .)
    FOR             reduce using rule 79 (epsilon -> .)
    RETURN          reduce using rule 79 (epsilon -> .)
    CALL            reduce using rule 79 (epsilon -> .)
    IDENTIFIER      reduce using rule 79 (epsilon -> .)
    END             reduce using rule 79 (epsilon -> .)

    V                              shift and go to state 23
    epsilon                        shift and go to state 7

state 16

    (13) var_decl -> ID . COLON type SEMICOLON

    COLON           shift and go to state 24


state 17

    (2) C -> CONST const_decl C .

    VAR             reduce using rule 2 (C -> CONST const_decl C .)
    PROCEDURE       reduce using rule 2 (C -> CONST const_decl C .)
    BEGIN           reduce using rule 2 (C -> CONST const_decl C .)
    PRINT           reduce using rule 2 (C -> CONST const_decl C .)
    READ            reduce using rule 2 (C -> CONST const_decl C .)
    IF              reduce using rule 2 (C -> CONST const_decl C .)
    FOR             reduce using rule 2 (C -> CONST const_decl C .)
    RETURN          reduce using rule 2 (C -> CONST const_decl C .)
    CALL            reduce using rule 2 (C -> CONST const_decl C .)
    IDENTIFIER      reduce using rule 2 (C -> CONST const_decl C .)
    END             reduce using rule 2 (C -> CONST const_decl C .)


state 18

    (10) const_decl -> ID EQUAL . integer SEMICOLON
    (77) integer -> . DIGIT

    DIGIT           shift and go to state 26

    integer                        shift and go to state 25

state 19

    (11) ID -> IDENTIFIER CAMMA . ID
    (11) ID -> . IDENTIFIER CAMMA ID
    (12) ID -> . IDENTIFIER

    IDENTIFIER      shift and go to state 10

    ID                             shift and go to state 27

state 20

    (1) program -> C V P BEGIN . statement S END SEMICOLON
    (27) statement -> . block
    (28) statement -> . print
    (29) statement -> . read
    (30) statement -> . asgn
    (31) statement -> . cond
    (32) statement -> . for
    (33) statement -> . return
    (34) statement -> . call
    (26) block -> . BEGIN C V S END SEMICOLON
    (35) print -> . PRINT LPAREN string E RPAREN SEMICOLON
    (39) read -> . READ LPAREN string Va RPAREN SEMICOLON
    (43) asgn -> . var ASSIGN expr SEMICOLON
    (44) cond -> . IF bool THEN statement EL
    (47) for -> . FOR ID ASSIGN expr TO expr DO statement
    (48) return -> . RETURN SEMICOLON
    (49) call -> . CALL IDENTIFIER LPAREN E RPAREN SEMICOLON
    (60) var -> . ID BRAC
    (61) var -> . ID
    (11) ID -> . IDENTIFIER CAMMA ID
    (12) ID -> . IDENTIFIER

    BEGIN           shift and go to state 28
    PRINT           shift and go to state 38
    READ            shift and go to state 39
    IF              shift and go to state 41
    FOR             shift and go to state 42
    RETURN          shift and go to state 44
    CALL            shift and go to state 45
    IDENTIFIER      shift and go to state 10

    statement                      shift and go to state 29
    block                          shift and go to state 30
    print                          shift and go to state 31
    read                           shift and go to state 32
    asgn                           shift and go to state 33
    cond                           shift and go to state 34
    for                            shift and go to state 35
    return                         shift and go to state 36
    call                           shift and go to state 37
    var                            shift and go to state 40
    ID                             shift and go to state 43

state 21

    (6) P -> proc_decl P .

    BEGIN           reduce using rule 6 (P -> proc_decl P .)


state 22

    (16) proc_decl -> PROCEDURE IDENTIFIER . LPAREN F RPAREN SEMICOLON block

    LPAREN          shift and go to state 46


state 23

    (4) V -> VAR var_decl V .

    PROCEDURE       reduce using rule 4 (V -> VAR var_decl V .)
    BEGIN           reduce using rule 4 (V -> VAR var_decl V .)
    PRINT           reduce using rule 4 (V -> VAR var_decl V .)
    READ            reduce using rule 4 (V -> VAR var_decl V .)
    IF              reduce using rule 4 (V -> VAR var_decl V .)
    FOR             reduce using rule 4 (V -> VAR var_decl V .)
    RETURN          reduce using rule 4 (V -> VAR var_decl V .)
    CALL            reduce using rule 4 (V -> VAR var_decl V .)
    IDENTIFIER      reduce using rule 4 (V -> VAR var_decl V .)
    END             reduce using rule 4 (V -> VAR var_decl V .)


state 24

    (13) var_decl -> ID COLON . type SEMICOLON
    (14) type -> . INTEGER
    (15) type -> . CHAR

    INTEGER         shift and go to state 48
    CHAR            shift and go to state 49

    type                           shift and go to state 47

state 25

    (10) const_decl -> ID EQUAL integer . SEMICOLON

    SEMICOLON       shift and go to state 50


state 26

    (77) integer -> DIGIT .

    SEMICOLON       reduce using rule 77 (integer -> DIGIT .)
    THEN            reduce using rule 77 (integer -> DIGIT .)
    AND             reduce using rule 77 (integer -> DIGIT .)
    OR              reduce using rule 77 (integer -> DIGIT .)
    EQUAL           reduce using rule 77 (integer -> DIGIT .)
    GREATER         reduce using rule 77 (integer -> DIGIT .)
    LESS            reduce using rule 77 (integer -> DIGIT .)
    GREATEQ         reduce using rule 77 (integer -> DIGIT .)
    LESSEQ          reduce using rule 77 (integer -> DIGIT .)
    NOT_EQUAL       reduce using rule 77 (integer -> DIGIT .)
    PLUS            reduce using rule 77 (integer -> DIGIT .)
    MINES           reduce using rule 77 (integer -> DIGIT .)
    MUL             reduce using rule 77 (integer -> DIGIT .)
    DIVIDE          reduce using rule 77 (integer -> DIGIT .)
    RPAREN          reduce using rule 77 (integer -> DIGIT .)
    RBRACKET        reduce using rule 77 (integer -> DIGIT .)
    CAMMA           reduce using rule 77 (integer -> DIGIT .)
    TO              reduce using rule 77 (integer -> DIGIT .)
    DO              reduce using rule 77 (integer -> DIGIT .)


state 27

    (11) ID -> IDENTIFIER CAMMA ID .

    EQUAL           reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    COLON           reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    LBRACKET        reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    ASSIGN          reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    THEN            reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    AND             reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    OR              reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    GREATER         reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    LESS            reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    GREATEQ         reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    LESSEQ          reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    NOT_EQUAL       reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    SEMICOLON       reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    PLUS            reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    MINES           reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    MUL             reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    DIVIDE          reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    RPAREN          reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    RBRACKET        reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    CAMMA           reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    TO              reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    DO              reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)


state 28

    (26) block -> BEGIN . C V S END SEMICOLON
    (2) C -> . CONST const_decl C
    (3) C -> . epsilon
    (79) epsilon -> .

    CONST           shift and go to state 3
    VAR             reduce using rule 79 (epsilon -> .)
    BEGIN           reduce using rule 79 (epsilon -> .)
    PRINT           reduce using rule 79 (epsilon -> .)
    READ            reduce using rule 79 (epsilon -> .)
    IF              reduce using rule 79 (epsilon -> .)
    FOR             reduce using rule 79 (epsilon -> .)
    RETURN          reduce using rule 79 (epsilon -> .)
    CALL            reduce using rule 79 (epsilon -> .)
    IDENTIFIER      reduce using rule 79 (epsilon -> .)
    END             reduce using rule 79 (epsilon -> .)

    C                              shift and go to state 51
    epsilon                        shift and go to state 4

state 29

    (1) program -> C V P BEGIN statement . S END SEMICOLON
    (8) S -> . statement S
    (9) S -> . epsilon
    (27) statement -> . block
    (28) statement -> . print
    (29) statement -> . read
    (30) statement -> . asgn
    (31) statement -> . cond
    (32) statement -> . for
    (33) statement -> . return
    (34) statement -> . call
    (79) epsilon -> .
    (26) block -> . BEGIN C V S END SEMICOLON
    (35) print -> . PRINT LPAREN string E RPAREN SEMICOLON
    (39) read -> . READ LPAREN string Va RPAREN SEMICOLON
    (43) asgn -> . var ASSIGN expr SEMICOLON
    (44) cond -> . IF bool THEN statement EL
    (47) for -> . FOR ID ASSIGN expr TO expr DO statement
    (48) return -> . RETURN SEMICOLON
    (49) call -> . CALL IDENTIFIER LPAREN E RPAREN SEMICOLON
    (60) var -> . ID BRAC
    (61) var -> . ID
    (11) ID -> . IDENTIFIER CAMMA ID
    (12) ID -> . IDENTIFIER

    END             reduce using rule 79 (epsilon -> .)
    BEGIN           shift and go to state 28
    PRINT           shift and go to state 38
    READ            shift and go to state 39
    IF              shift and go to state 41
    FOR             shift and go to state 42
    RETURN          shift and go to state 44
    CALL            shift and go to state 45
    IDENTIFIER      shift and go to state 10

    statement                      shift and go to state 52
    S                              shift and go to state 53
    epsilon                        shift and go to state 54
    block                          shift and go to state 30
    print                          shift and go to state 31
    read                           shift and go to state 32
    asgn                           shift and go to state 33
    cond                           shift and go to state 34
    for                            shift and go to state 35
    return                         shift and go to state 36
    call                           shift and go to state 37
    var                            shift and go to state 40
    ID                             shift and go to state 43

state 30

    (27) statement -> block .

    BEGIN           reduce using rule 27 (statement -> block .)
    PRINT           reduce using rule 27 (statement -> block .)
    READ            reduce using rule 27 (statement -> block .)
    IF              reduce using rule 27 (statement -> block .)
    FOR             reduce using rule 27 (statement -> block .)
    RETURN          reduce using rule 27 (statement -> block .)
    CALL            reduce using rule 27 (statement -> block .)
    IDENTIFIER      reduce using rule 27 (statement -> block .)
    END             reduce using rule 27 (statement -> block .)
    ELSE            reduce using rule 27 (statement -> block .)


state 31

    (28) statement -> print .

    BEGIN           reduce using rule 28 (statement -> print .)
    PRINT           reduce using rule 28 (statement -> print .)
    READ            reduce using rule 28 (statement -> print .)
    IF              reduce using rule 28 (statement -> print .)
    FOR             reduce using rule 28 (statement -> print .)
    RETURN          reduce using rule 28 (statement -> print .)
    CALL            reduce using rule 28 (statement -> print .)
    IDENTIFIER      reduce using rule 28 (statement -> print .)
    END             reduce using rule 28 (statement -> print .)
    ELSE            reduce using rule 28 (statement -> print .)


state 32

    (29) statement -> read .

    BEGIN           reduce using rule 29 (statement -> read .)
    PRINT           reduce using rule 29 (statement -> read .)
    READ            reduce using rule 29 (statement -> read .)
    IF              reduce using rule 29 (statement -> read .)
    FOR             reduce using rule 29 (statement -> read .)
    RETURN          reduce using rule 29 (statement -> read .)
    CALL            reduce using rule 29 (statement -> read .)
    IDENTIFIER      reduce using rule 29 (statement -> read .)
    END             reduce using rule 29 (statement -> read .)
    ELSE            reduce using rule 29 (statement -> read .)


state 33

    (30) statement -> asgn .

    BEGIN           reduce using rule 30 (statement -> asgn .)
    PRINT           reduce using rule 30 (statement -> asgn .)
    READ            reduce using rule 30 (statement -> asgn .)
    IF              reduce using rule 30 (statement -> asgn .)
    FOR             reduce using rule 30 (statement -> asgn .)
    RETURN          reduce using rule 30 (statement -> asgn .)
    CALL            reduce using rule 30 (statement -> asgn .)
    IDENTIFIER      reduce using rule 30 (statement -> asgn .)
    END             reduce using rule 30 (statement -> asgn .)
    ELSE            reduce using rule 30 (statement -> asgn .)


state 34

    (31) statement -> cond .

    BEGIN           reduce using rule 31 (statement -> cond .)
    PRINT           reduce using rule 31 (statement -> cond .)
    READ            reduce using rule 31 (statement -> cond .)
    IF              reduce using rule 31 (statement -> cond .)
    FOR             reduce using rule 31 (statement -> cond .)
    RETURN          reduce using rule 31 (statement -> cond .)
    CALL            reduce using rule 31 (statement -> cond .)
    IDENTIFIER      reduce using rule 31 (statement -> cond .)
    END             reduce using rule 31 (statement -> cond .)
    ELSE            reduce using rule 31 (statement -> cond .)


state 35

    (32) statement -> for .

    BEGIN           reduce using rule 32 (statement -> for .)
    PRINT           reduce using rule 32 (statement -> for .)
    READ            reduce using rule 32 (statement -> for .)
    IF              reduce using rule 32 (statement -> for .)
    FOR             reduce using rule 32 (statement -> for .)
    RETURN          reduce using rule 32 (statement -> for .)
    CALL            reduce using rule 32 (statement -> for .)
    IDENTIFIER      reduce using rule 32 (statement -> for .)
    END             reduce using rule 32 (statement -> for .)
    ELSE            reduce using rule 32 (statement -> for .)


state 36

    (33) statement -> return .

    BEGIN           reduce using rule 33 (statement -> return .)
    PRINT           reduce using rule 33 (statement -> return .)
    READ            reduce using rule 33 (statement -> return .)
    IF              reduce using rule 33 (statement -> return .)
    FOR             reduce using rule 33 (statement -> return .)
    RETURN          reduce using rule 33 (statement -> return .)
    CALL            reduce using rule 33 (statement -> return .)
    IDENTIFIER      reduce using rule 33 (statement -> return .)
    END             reduce using rule 33 (statement -> return .)
    ELSE            reduce using rule 33 (statement -> return .)


state 37

    (34) statement -> call .

    BEGIN           reduce using rule 34 (statement -> call .)
    PRINT           reduce using rule 34 (statement -> call .)
    READ            reduce using rule 34 (statement -> call .)
    IF              reduce using rule 34 (statement -> call .)
    FOR             reduce using rule 34 (statement -> call .)
    RETURN          reduce using rule 34 (statement -> call .)
    CALL            reduce using rule 34 (statement -> call .)
    IDENTIFIER      reduce using rule 34 (statement -> call .)
    END             reduce using rule 34 (statement -> call .)
    ELSE            reduce using rule 34 (statement -> call .)


state 38

    (35) print -> PRINT . LPAREN string E RPAREN SEMICOLON

    LPAREN          shift and go to state 55


state 39

    (39) read -> READ . LPAREN string Va RPAREN SEMICOLON

    LPAREN          shift and go to state 56


state 40

    (43) asgn -> var . ASSIGN expr SEMICOLON

    ASSIGN          shift and go to state 57


state 41

    (44) cond -> IF . bool THEN statement EL
    (64) bool -> . NOT bool
    (65) bool -> . bool AND bool
    (66) bool -> . bool OR bool
    (67) bool -> . bool relop bool
    (68) bool -> . LPAREN bool RPAREN
    (69) bool -> . ID
    (70) bool -> . integer
    (11) ID -> . IDENTIFIER CAMMA ID
    (12) ID -> . IDENTIFIER
    (77) integer -> . DIGIT

    NOT             shift and go to state 59
    LPAREN          shift and go to state 60
    IDENTIFIER      shift and go to state 10
    DIGIT           shift and go to state 26

    bool                           shift and go to state 58
    ID                             shift and go to state 61
    integer                        shift and go to state 62

state 42

    (47) for -> FOR . ID ASSIGN expr TO expr DO statement
    (11) ID -> . IDENTIFIER CAMMA ID
    (12) ID -> . IDENTIFIER

    IDENTIFIER      shift and go to state 10

    ID                             shift and go to state 63

state 43

    (60) var -> ID . BRAC
    (61) var -> ID .
    (62) BRAC -> . LBRACKET expr RBRACKET
    (63) BRAC -> . epsilon
    (79) epsilon -> .

  ! reduce/reduce conflict for ASSIGN resolved using rule 61 (var -> ID .)
    ASSIGN          reduce using rule 61 (var -> ID .)
    LBRACKET        shift and go to state 65

  ! ASSIGN          [ reduce using rule 79 (epsilon -> .) ]

    BRAC                           shift and go to state 64
    epsilon                        shift and go to state 66

state 44

    (48) return -> RETURN . SEMICOLON

    SEMICOLON       shift and go to state 67


state 45

    (49) call -> CALL . IDENTIFIER LPAREN E RPAREN SEMICOLON

    IDENTIFIER      shift and go to state 68


state 46

    (16) proc_decl -> PROCEDURE IDENTIFIER LPAREN . F RPAREN SEMICOLON block
    (17) F -> . format SEMICOLON F
    (18) F -> . format
    (19) F -> . epsilon
    (20) format -> . ID COLON M type
    (79) epsilon -> .
    (11) ID -> . IDENTIFIER CAMMA ID
    (12) ID -> . IDENTIFIER

    RPAREN          reduce using rule 79 (epsilon -> .)
    IDENTIFIER      shift and go to state 10

    F                              shift and go to state 69
    format                         shift and go to state 70
    epsilon                        shift and go to state 71
    ID                             shift and go to state 72

state 47

    (13) var_decl -> ID COLON type . SEMICOLON

    SEMICOLON       shift and go to state 73


state 48

    (14) type -> INTEGER .

    SEMICOLON       reduce using rule 14 (type -> INTEGER .)
    RPAREN          reduce using rule 14 (type -> INTEGER .)


state 49

    (15) type -> CHAR .

    SEMICOLON       reduce using rule 15 (type -> CHAR .)
    RPAREN          reduce using rule 15 (type -> CHAR .)


state 50

    (10) const_decl -> ID EQUAL integer SEMICOLON .

    CONST           reduce using rule 10 (const_decl -> ID EQUAL integer SEMICOLON .)
    VAR             reduce using rule 10 (const_decl -> ID EQUAL integer SEMICOLON .)
    PROCEDURE       reduce using rule 10 (const_decl -> ID EQUAL integer SEMICOLON .)
    BEGIN           reduce using rule 10 (const_decl -> ID EQUAL integer SEMICOLON .)
    PRINT           reduce using rule 10 (const_decl -> ID EQUAL integer SEMICOLON .)
    READ            reduce using rule 10 (const_decl -> ID EQUAL integer SEMICOLON .)
    IF              reduce using rule 10 (const_decl -> ID EQUAL integer SEMICOLON .)
    FOR             reduce using rule 10 (const_decl -> ID EQUAL integer SEMICOLON .)
    RETURN          reduce using rule 10 (const_decl -> ID EQUAL integer SEMICOLON .)
    CALL            reduce using rule 10 (const_decl -> ID EQUAL integer SEMICOLON .)
    IDENTIFIER      reduce using rule 10 (const_decl -> ID EQUAL integer SEMICOLON .)
    END             reduce using rule 10 (const_decl -> ID EQUAL integer SEMICOLON .)


state 51

    (26) block -> BEGIN C . V S END SEMICOLON
    (4) V -> . VAR var_decl V
    (5) V -> . epsilon
    (79) epsilon -> .

    VAR             shift and go to state 6
    BEGIN           reduce using rule 79 (epsilon -> .)
    PRINT           reduce using rule 79 (epsilon -> .)
    READ            reduce using rule 79 (epsilon -> .)
    IF              reduce using rule 79 (epsilon -> .)
    FOR             reduce using rule 79 (epsilon -> .)
    RETURN          reduce using rule 79 (epsilon -> .)
    CALL            reduce using rule 79 (epsilon -> .)
    IDENTIFIER      reduce using rule 79 (epsilon -> .)
    END             reduce using rule 79 (epsilon -> .)

    V                              shift and go to state 74
    epsilon                        shift and go to state 7

state 52

    (8) S -> statement . S
    (8) S -> . statement S
    (9) S -> . epsilon
    (27) statement -> . block
    (28) statement -> . print
    (29) statement -> . read
    (30) statement -> . asgn
    (31) statement -> . cond
    (32) statement -> . for
    (33) statement -> . return
    (34) statement -> . call
    (79) epsilon -> .
    (26) block -> . BEGIN C V S END SEMICOLON
    (35) print -> . PRINT LPAREN string E RPAREN SEMICOLON
    (39) read -> . READ LPAREN string Va RPAREN SEMICOLON
    (43) asgn -> . var ASSIGN expr SEMICOLON
    (44) cond -> . IF bool THEN statement EL
    (47) for -> . FOR ID ASSIGN expr TO expr DO statement
    (48) return -> . RETURN SEMICOLON
    (49) call -> . CALL IDENTIFIER LPAREN E RPAREN SEMICOLON
    (60) var -> . ID BRAC
    (61) var -> . ID
    (11) ID -> . IDENTIFIER CAMMA ID
    (12) ID -> . IDENTIFIER
